// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineElement in development should render a warning 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  Unknown inline node type "undefined" Check the console for more info.
</div>
`;

exports[`InlineElement in development should render a warning and the children 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  Unknown inline node type "undefined" Check the console for more info.
  <p>
    Foo
  </p>
</div>
`;

exports[`InlineElement in production should render null 1`] = `null`;

exports[`InlineElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
